config/boomi_molecule_eks_service-alb.yaml
apiVersion: v1
kind: Service
metadata:
  name: molecule-service
  labels:
    app: molecule
spec:
  selector:
    app: molecule
  type: NodePort
  ports:
  - protocol: TCP
    port: 443
    targetPort: 9093
  - protocol: TCP
    port: 80
    targetPort: 9090
